@@ -7,7 +7,8 @@ plugin=org.omegat.filters3.xml.xliff.XLIFFFilter \
     org.omegat.gui.glossary.taas.TaaSPlugin \
     org.omegat.externalfinder.ExternalFinder \
     org.omegat.gui.theme.DefaultFlatTheme \
-    org.omegat.gui.theme.DefaultClassicTheme
+    org.omegat.gui.theme.DefaultClassicTheme \
+    org.omegat.util.gui.HtmlMediaSupport
 filter=org.omegat.filters3.xml.android.AndroidFilter \
     org.omegat.filters2.latex.LatexFilter \
     org.omegat.filters2.po.PoFilter \
