@@ -118,6 +118,9 @@ dependencies {
         api 'javax.xml.bind:jaxb-api:2.3.1'
         implementation 'com.sun.xml.bind:jaxb-impl:2.3.4'
 
+        // Data: inline data URL handler
+        implementation 'tokyo.northside:url-protocol-handler:0.1.4'
+
         // PDF Filter
         implementation 'org.apache.pdfbox:pdfbox:2.0.24'
 
