@@ -1,7 +1,7 @@
 ----------------------------------------------------------------------
  OmegaT 5.7.0
 ----------------------------------------------------------------------
-  1 Enhancement
+  2 Enhancements
   0 Bug fixes
   1 Localisation updates
 ----------------------------------------------------------------------
@@ -11,6 +11,9 @@
 
   - Improve support for markup in DSL dictionaries
   https://sourceforge.net/p/omegat/feature-requests/1594
+
+  - Display images in Dictionary pane
+  https://sourceforge.net/p/omegat/feature-requests/1595/
 
   Localisation Updates:
 
